2001-02-16  Hans Petter Jansson  <hpj@ximian.com>

	* platform.pl.in: Silence stderr output, disable early abort code.

2001-02-15  Arturo Espinosa  <arturo@ximian.com>

	* xml.pl.in: substitute &amp; entity too.

2001-02-13  Hans Petter Jansson  <hpj@ximian.com>

	* gen-reportcode-list.sh: Look in *.pl.in as well.
	* general.pl.in, platform.pl.in: Report fixups.

2001-02-12  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in: (xst_network_get_interface_{replace,parse}_table) added iface name support.
	
2001-02-12  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Fixed bug which would cause [global] section to
	  not be written in some cases.

2001-02-10  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in: (xst_network_get_interface_{replace,parse}_table) added wvdial support.
	  (xst_network_ensure_local_host_entry) changed name: added "network" prefix.
	  (xst_network_dialing_set) save the wvdial configuration.
	* network-conf.in: (xml_print_hash) a more general instance of xml_print_interfaces, to
	  handle both interfaces and dialing.
	  (xml_parse_dialing) parse the wvdial configuration from XML to internal hash.
	
2001-02-09  Hans Petter Jansson  <hpj@ximian.com>

	* *-conf.in: Added platform comparisons and die if necessary.

2001-02-09  Hans Petter Jansson  <hpj@ximian.com>

	* platform.pl.in: (xst_platform_ensure_supported): Implement.

2001-02-09  Hans Petter Jansson  <hpj@ximian.com>

	* *.in: Removed -*-perl-*- lines that were confusing Emacs.

2001-02-09  Arturo Espinosa <arturo@ximian.com>

	* network-conf.in: removed a bunch of set_* functions, whose functionality
	  already is in network.pl.in.
	* network.pl.in: almost finished, lots of bug fixes. added bootproto support.
	* replace.pl.in: xst_replace_chat implemented.
	* network.pl.in, replace.pl.in: fixed conflicts with new general function namings.
	* network.pl.in: (xst_network_dialing_get) wvdialer parsing support. Minor indentation fix.