@@ -48,9 +48,11 @@ sub xst_progress
     $prc = 99;
   }
 
-  if ($xst_progress) { printf "%03d percent done.\n", $prc; }
-
-  $xst_progress_last_percentage = $prc;
+  if ($xst_progress && (int $prc > int $xst_progress_last_percentage))
+  {
+    printf "%03d percent done.\n", $prc;
+    $xst_progress_last_percentage = $prc;
+  }
 }
 
 
